agents: initial commit for killbill todo