@@ -26,6 +26,8 @@ The following files were modified from upstream to adapt to Jetty 10 API changes
 | `JettyHandler.java` | Removed `WebSocketServerFactory` field/parameter; replaced `Request.MULTIPART_CONFIG_ELEMENT` with string constant; simplified `upgrade()` method | `WebSocketServerFactory` removed in Jetty 10; `MULTIPART_CONFIG_ELEMENT` constant removed from `Request` |
 | `JettyServer.java` | Removed `WebSocketPolicy`/`WebSocketServerFactory`/`DecoratedObjectFactory` imports and usage; changed `new SslContextFactory()` → `new SslContextFactory.Server()` | WebSocket API completely restructured in Jetty 10; `SslContextFactory` made abstract with `Server` subclass |
 | `Response.java` | `Response.Forwarding.setResetHeadersOnError()`: changed `this.setResetHeadersOnError(value)` → `rsp.setResetHeadersOnError(value)` | Upstream bug — infinite recursion. Every other method in `Forwarding` delegates to `rsp`; this one called `this` by mistake |
+| `RoutePattern.java` | Simplified the glob-route regex to remove nested ambiguous quantifiers | Fixes CodeQL ReDoS warning without changing route-matching semantics |
+| `PemReader.java` | Simplified PEM block regex whitespace handling from redundant alternation to `\\s+` | Fixes CodeQL ReDoS warning while keeping the same accepted PEM formats |
 
 ## POM / Dependency Changes
 
@@ -51,19 +53,19 @@ Differences from upstream dependency versions:
 | `org.slf4j:slf4j-api` | 1.7.x | 2.0.9 (managed) | Kill Bill standardized version |
 | `org.powermock:powermock-*` | 2.0.0 | **removed** | Not managed by killbill-oss-parent; obsolete for modern JDKs |
 | `jakarta.annotation:jakarta.annotation-api` | not present | 1.3.5 (managed) | Added for `@PostConstruct`/`@PreDestroy` in `LifeCycle.java` |
-| `com.github.spotbugs:spotbugs-annotations` | not present | **not included** | Will be added in Phase 1.8 (SpotBugs triage) |
+| `com.github.spotbugs:spotbugs-annotations` | not present | **not included** | Not needed; no forked source uses `@SuppressFBWarnings`, and SpotBugs triage uses the exclusion filter instead |
 | `org.eclipse.jetty:jetty-alpn-server` | not present | 10.0.16 | Required by `JettyServer.java` for ALPN/HTTP2 support |
 | `org.eclipse.jetty.websocket:websocket-jetty-api` | not present (was part of websocket-server) | 10.0.16 | Jetty 10 split WebSocket API into separate artifact |
 | `org.eclipse.jetty:jetty-io` | transitive | 10.0.16 (explicit) | Used directly in source; declared explicitly to satisfy dependency:analyze |
 | `org.eclipse.jetty:jetty-util` | transitive | 10.0.16 (explicit) | Used directly in source; declared explicitly to satisfy dependency:analyze |
 | `javax.inject:javax.inject` | transitive via Guice | managed (explicit) | Used directly in source; declared explicitly to satisfy dependency:analyze |
 | `junit:junit` | optional (compile) | compile + optional | Parent forces test scope; explicit compile needed for `JoobyRule` |
-| `org.mockito:mockito-core` | not present | 5.3.1 (managed, test) | Added for Phase 1.7 EasyMock→Mockito migration |
-| `org.easymock:easymock` | present (test) | **removed** | Replaced by mockito-core in Phase 1.7.7 |
-| `org.apache.httpcomponents:httpclient` | not present | 4.5.14 (test) | Integration test HTTP client (Phase 1.7.6) |
-| `org.apache.httpcomponents:httpcore` | not present | 4.4.16 (test) | Required by httpclient (Phase 1.7.6) |
-| `org.apache.httpcomponents:fluent-hc` | not present | 4.5.14 (test) | Client.java fluent Executor API (Phase 1.7.6) |
-| `org.apache.httpcomponents:httpmime` | not present | 4.5.14 (test) | Client.java multipart support (Phase 1.7.6) |
+| `org.mockito:mockito-core` | not present | 5.3.1 (managed, test) | Sole active mocking framework for the migrated test tree |
+| `org.easymock:easymock` | present (test) | **removed** | Replaced by mockito-core in the active test tree |
+| `org.apache.httpcomponents:httpclient` | not present | 4.5.14 (test) | Integration test HTTP client |
+| `org.apache.httpcomponents:httpcore` | not present | 4.4.16 (test) | Required by httpclient |
+| `org.apache.httpcomponents:fluent-hc` | not present | 4.5.14 (test) | `Client.java` fluent Executor API |
+| `org.apache.httpcomponents:httpmime` | not present | 4.5.14 (test) | `Client.java` multipart support |
 
 ## Structural Changes
 
@@ -73,8 +75,8 @@ Differences from upstream dependency versions:
 | `jooby-netty` excluded | Kill Bill uses Jetty; SSE/WebSocket work via core SPI |
 | ASM shade plugin preserved | Relocates `org.objectweb.asm` → `org.jooby.internal.asm` (same as upstream) |
 | Test compilation disabled by default | 76 of 125 test files depend on PowerMock (not available); enabled via `-Pjooby` profile |
-| 20 test files moved to `src/test/java-excluded/` | Were blocked by PowerMock/missing deps; 14 restored in Phases 1.7.2-1.7.6, 6 remain (non-mock blockers) |
-| 105 test files remain in `src/test/java/` | 50 pre-existing + 43 migrated (1.7.2) + 12 migrated (1.7.3); compile and run with `-Pjooby` profile (751 tests pass) |
+| 20 test files moved to `src/test/java-excluded/` | Were blocked by PowerMock/missing deps; all 20 have now been restored into the active test tree |
+| 124 Java files remain in `src/test/java/` | Active test tree after migration, including shared test utilities; `-Pjooby` runs 108 test classes / 923 tests successfully |
 | SpotBugs exclude filter (`spotbugs-exclude.xml`) | Targeted exclusions for 77 upstream findings (12 bug patterns across 10 categories) triaged as intentional framework patterns or low-risk upstream code |
 | Apache RAT exclusions for resources | Resource files (`.conf`, `.xml`, `.properties`, SSL certs) have no license headers |
 
@@ -83,189 +85,64 @@ Differences from upstream dependency versions:
 None. All resource files (`web.xml`, `jooby.conf`, `server.conf`, SSL certs, `mime.properties`,
 test configs) are byte-identical to upstream.
 
-## Test Framework Migration (Phase 1.7)
+## Test Infrastructure Changes
 
-Upstream tests use EasyMock + PowerMock. These are being migrated to **Mockito 5** (`mockito-core:5.3.1`).
+Upstream tests used EasyMock + PowerMock. The active Kill Bill fork now uses **Mockito 5**
+(`mockito-core:5.3.1`) as its sole mocking framework.
 
-### Sub-phase 1.7.1 — MockUnit.java Rewrite ✅
+### MockUnit Rewrite
 
-`src/test/java/org/jooby/test/MockUnit.java` completely rewritten (not a modification of upstream).
-The upstream version used EasyMock record-replay + PowerMock static/constructor mocking.
-The new version uses pure Mockito 5 APIs:
+`src/test/java/org/jooby/test/MockUnit.java` was rewritten around Mockito 5 APIs instead of the
+upstream EasyMock record/replay + PowerMock static/constructor mocking model.
 
 | Old API (EasyMock/PowerMock) | New API (Mockito 5) |
 |---|---|
 | `EasyMock.createMock()` | `Mockito.mock()` |
-| `PowerMock.createMock()` (finals) | `Mockito.mock()` (inline mock maker handles finals natively) |
+| `PowerMock.createMock()` (finals) | `Mockito.mock()` |
 | `PowerMock.mockStatic()` + `EasyMock.expect(Static.method())` | `Mockito.mockStatic()` returning `MockedStatic<T>` |
 | `PowerMock.createMockAndExpectNew()` / `MockUnit.constructor().build()` | Pre-mock + deferred `Mockito.mockConstruction()` with delegation |
 | `EasyMock.capture()` / `captured()` | `ArgumentCaptor.forClass().capture()` / `getValue()` |
-| `PowerMock.replay()` / `PowerMock.verify()` | Not needed — Mockito stubs are active immediately |
+| `PowerMock.replay()` / `PowerMock.verify()` | Not needed; Mockito stubs are active immediately |
 | `partialMock(type, methods)` | `Mockito.mock(type, CALLS_REAL_METHODS)` |
 
-Key design: Constructor mocking uses a "pre-mock + delegation" pattern. `build()` creates a Mockito mock
-that callers configure with `when()`. At `run()` time, `MockedConstruction` is opened; each constructed mock
-delegates all calls to its corresponding pre-mock via `Method.invoke()`.
+Notable implementation changes in `MockUnit.java`:
+- constructor mocking uses a pre-mock + delegation pattern; constructed mocks delegate back to the
+  corresponding pre-mock via reflection
+- `ConstructorArgCapture` and pending capture queues preserve constructor argument capture support
+- `captured()` now merges values from argument captors, constructor captures, and explicit void captures
+- `openConstructionMocks()` uses `setAccessible(true)` for package-private inner-class delegation
+- `preMockToConstructed` resolves pre-mock to constructed mock identity when tests compare both forms
 
-### Sub-phase 1.7.2 — Simple MockUnit Test Migration ✅
+### Migrated and Rewritten Tests
 
-44 test files migrated from EasyMock to Mockito syntax (moved from `java-excluded/` to `src/test/java/`).
+All 20 files that had been moved to `src/test/java-excluded/` during the migration are now restored
+to the active test tree. `src/test/java-excluded/` is empty.
 
-**Mechanical changes applied to all 44 files:**
-- `EasyMock.expect(x).andReturn(y)` → `Mockito.when(x).thenReturn(y)`
-- `EasyMock.expectLastCall()` → removed (void stubs not needed in Mockito)
-- `expect().andThrow()` → `when().thenThrow()` / `doThrow().when()`
-- `@RunWith(PowerMockRunner.class)` / `@PrepareForTest` annotations removed
-- Import replacements: `org.easymock.*` → `org.mockito.*`
-
-**Manual fixes for specific files:**
+Notable rewrites and follow-up restorations:
 
 | File | Change | Reason |
 |---|---|---|
-| `Issue1087.java` | Removed `EasyMock.aryEq()` wrapper | Void method doesn't need argument matcher |
-| `RouteDefinitionTest.java` | Line number assertion `9→24` | Kill Bill license header adds 15 lines |
-| `RequestTest.java` | Merged sequential `when().thenReturn()` | Mockito overrides; use `thenReturn(a, b)` for ordered returns |
-| `JacksonParserTest.java` | Cast `null` to `(java.lang.reflect.Type)` | Overload disambiguation for `parse(Type)` vs `parse(MediaType)` |
-| `OptionsHandlerTest.java` | Created `routeMethods(String...)` varargs helper | Only file with true sequential return pattern within same MockUnit block |
-| `SseTest.java` | Rewrote 3 methods with explicit `doAnswer()` captors | Void method arg capturing requires `doAnswer()` instead of `ArgumentCaptor` |
+| `CookieImplTest.java` | Reworked assertions to avoid mocking `System.class` | Mockito cannot mock `java.lang.System` reliably |
+| `RequestLoggerTest.java` | Reworked latency assertion and void captures | Avoids `System` mocking and adapts to Mockito void stubbing |
+| `DefaultErrHandlerTest.java` | Void captures rewritten with `doAnswer()` | `rsp.send(...)` is a void method |
+| `JettyResponseTest.java` | Void captures rewritten with `doAnswer()` | `output.sendContent(...)` is a void method |
+| `ServletServletResponseTest.java` | `partialMock(FileChannel.class)` replaced with `mock(FileChannel.class)` | `CALLS_REAL_METHODS` caused close-path failures |
+| `FileConfTest.java` | Rewritten as a real filesystem test | Replaces EasyMock + PowerMock constructor/static mocking |
+| `LogbackConfTest.java` | Rewritten as a real filesystem/config-driven test | Replaces MockUnit-based lookup stubbing |
+| `RequestScopeTest.java` | Rewritten as a direct behavior test | Exercises circular-proxy handling without a compile-time Guice internal type dependency |
+| `JettyHandlerTest.java` | Rewritten around current Jetty 10 adapter behavior | Upstream websocket-era expectations no longer matched the fork |
+| `JettyServerTest.java` | Rewritten around real `Server`, `ServerConnector`, and `ContextHandler` objects | Replaces removed Jetty 9 websocket factory assumptions |
+| `SseFeature.java` | Rewritten to use JDK 11 `HttpClient` | Replaces removed Ning AsyncHttpClient dependency |
 
-**Files excluded from migration (non-mock issues):**
+### Current Test Baseline
 
-| File | Reason | Status |
-|---|---|---|
-| `LogbackConfTest.java` | `NoClassDefFoundError: org/jooby/Jooby` (static init classpath issue) | Remains in `java-excluded/` |
+- `-Pjooby` remains the active test profile for the module
+- `reuseForks=false` remains configured in Surefire for stable Mockito inline runs
+- active test tree: `124` Java files in `src/test/java`
+- runnable suite: `108` test classes / `923` tests
 
-**Surefire configuration changes:**
+### Additional Test-Tree Cleanup
 
-| Setting | Value | Reason |
-|---|---|---|
-| `reuseForks` | `false` | EasyMock + Mockito coexistence corrupts ByteBuddy-generated `Method` objects when sharing JVM across test classes |
-| `argLine` | `-XX:-OmitStackTraceInFastThrow --illegal-access=permit` | Full stack traces for debugging; JDK 11 module access |
-
-**MockUnit.java changes for Phase 1.7.2:**
-- `ConstructorArgCapture` inner class + pending capture queue for `build()` context
-- `build()` clears orphaned Mockito matchers via `ThreadSafeMockingProgress.pullLocalizedMatchers()`
-- `captured()` merges from ArgumentCaptors + constructor arg captures
-- `openConstructionMocks()` populates constructor captures from `context.arguments()`
-
-**Result:** 661 tests pass (327 pre-existing + 334 migrated), 0 failures.
-
-### Sub-phase 1.7.3 — mockStatic Test Migration ✅
-
-12 test files migrated that use `unit.mockStatic()` for static method stubbing.
-
-**Static mock conversion pattern:**
-- `unit.mockStatic(X.class); when(X.method(args)).thenReturn(val)` → `unit.mockStatic(X.class).when(() -> X.method(args)).thenReturn(val)`
-- No-arg static methods use method reference: `unit.mockStatic(X.class).when(X::method).thenReturn(val)`
-
-**Additional fixes:**
-
-| File | Change | Reason |
-|---|---|---|
-| `CookieImplTest.java` | Rewrote 2 tests to not mock `System.class` | Mockito cannot mock `java.lang.System` (class loader interference) |
-| `RequestLoggerTest.java` | Rewrote `latency` test with regex assertion; void capture → `doAnswer()` | Cannot mock `System.class`; `rsp.complete()` is void |
-| `DefaultErrHandlerTest.java` | Void capture → `doAnswer()` with `AtomicReference` | `rsp.send(unit.capture(...))` is void method |
-| `JettyResponseTest.java` | Void capture → `doAnswer()` with `AtomicReference` | `output.sendContent(unit.capture(...))` is void method |
-| `ServletServletResponseTest.java` | `partialMock(FileChannel.class)` → `mock(FileChannel.class)` | `CALLS_REAL_METHODS` on `FileChannel.close()` causes NPE |
-| `CookieSignatureTest.java` | Removed `@PowerMockIgnore` annotation | Not needed in Mockito |
-
-**Result:** 751 tests pass (661 prior + 90 new), 0 failures.
-
-### Sub-phase 1.7.4 — mockConstructor Test Migration ✅
-
-5 test files migrated that use `unit.mockConstructor()`/`unit.constructor()` for constructor mocking,
-plus 1 file (`RequestScopeTest`) identified as already-Mockito but blocked by Guice internal API.
-
-**MockUnit enhancement:**
-- Added `preMockToConstructed` reverse map: resolves pre-mock → construction mock in `get()`/`first()`,
-  fixing identity mismatches when tests compare `unit.get()` results with objects from `new`.
-
-**Additional fixes:**
-
-| File | Change | Reason |
-|---|---|---|
-| `WebSocketImplTest.java` | 7 void method captures → `doAnswer()` + `AtomicReference`; `expectLastCall().andThrow()` → `doThrow()` | Void methods (`onTextMessage`, `onErrorMessage`, `onCloseMessage`) can't use `ArgumentCaptor` |
-| `WsBinaryMessageTest.java` | 2 tests rewritten: `assertEquals(preMock, constructed)` → `assertNotNull` + `isMock()` | MockedConstruction returns different object than pre-mock; identity comparison fails |
-
-**Deferred files:**
-
-| File | Reason |
-|---|---|
-| `LogbackConfTest.java` | `NoClassDefFoundError: org/jooby/Jooby` (static init classpath issue) |
-| `RequestScopeTest.java` | `CircularDependencyProxy` (Guice internal API, not accessible in Java 11 module system) |
-| `JettyServerTest.java` | Uses `WebSocketServerFactory` (removed in Jetty 10) |
-| `JettyHandlerTest.java` | Uses `WebSocketServerFactory` (removed in Jetty 10) |
-
-**Result:** 807 tests pass (751 prior + 56 new), 0 failures.
-
-### Sub-phase 1.7.5 — Complex Test Migration (mockStatic + mockConstructor) ✅
-
-5 test files migrated that use BOTH `mockStatic` AND `mockConstructor`. 1 file (`FileConfTest`)
-deferred — same `NoClassDefFoundError` as LogbackConfTest (Jooby static init requires PowerMock classloader).
-
-**MockUnit enhancements:**
-- Added `method.setAccessible(true)` in `openConstructionMocks()` delegation — package-private inner
-  classes (e.g., `SessionImpl$Builder`) require accessible flag for `Method.invoke()`.
-- Added matcher cleanup (`pullLocalizedMatchers()`) and capture drain to `mockConstructor()` method
-  — matches existing `build()` behavior to prevent orphaned matchers from `unit.capture()` args.
-- Added `addVoidCapture(type, value)` method and `voidCaptures` map — enables `doAnswer()` based
-  capturing for void methods. `captured()` merges values from ArgumentCaptors, constructor captures,
-  AND void captures.
-
-**Migrated files:**
-
-| File | Tests | Key Changes |
-|---|---|---|
-| `RouteMetadataTest.java` | 10 | Line number assertions updated (+10 offset) |
-| `BodyReferenceImplTest.java` | 11 | Straightforward mockStatic + mockConstructor migration |
-| `CookieSessionManagerTest.java` | 9 | `doAnswer()` + `AtomicReference` for void captures |
-| `ServerSessionManagerTest.java` | 13 | `any(Session.Builder.class)` for pre-mock identity mismatch |
-| `JoobyTest.java` | 44 | Largest migration (3000 lines); see additional details below |
-
-**JoobyTest-specific fixes:**
-- 46 `binding.toInstance(unit.capture(Route.Definition.class))` calls → single `doAnswer()` per expect
-  block using `unit.addVoidCapture()`.
-- ~30 void mock calls with matchers (`toInstance(isA(...))`, `install(any(...))`, etc.) → removed
-  entirely (void calls on mocks are no-ops in Mockito).
-- `Runtime.availableProcessors()` is native — cannot be mocked by Mockito inline mock maker.
-  Removed the stubbing; production code uses real CPU count.
-- `MockedStatic.when()` leaks stubbing state — void mock calls immediately preceding `MockedStatic`
-  operations (e.g., `tc.configure(binder)`) cause `CannotStubVoidMethodWithReturnValue`. Removed
-  these unnecessary void calls.
-- `module.configure(isA(...), isA(...), eq(...))` → `module.configure(null, null, binder)` (matchers
-  in void context).
-
-**Deferred file:**
-
-| File | Reason |
-|---|---|
-| `FileConfTest.java` | `NoClassDefFoundError: org/jooby/Jooby` (same as LogbackConfTest) |
-
-**Result:** 894 tests pass (807 prior + 87 new), 0 failures.
-
-### Sub-phase 1.7.6 -- Integration Test Utilities
-
-4 non-MockUnit utility files moved from java-excluded/ to java/. These are the integration test
-infrastructure (JUnit runner, HTTP client wrapper, base classes) -- no EasyMock/PowerMock references.
-
-New test-scope dependencies in pom.xml:
-- org.apache.httpcomponents:httpclient 4.5.14 (Client.java HTTP test client)
-- org.apache.httpcomponents:httpcore 4.4.16 (required by httpclient, flagged by dependency analysis)
-- org.apache.httpcomponents:fluent-hc 4.5.14 (Client.java fluent Executor API)
-- org.apache.httpcomponents:httpmime 4.5.14 (Client.java multipart upload support)
-
-Deferred: SseFeature.java -- hardwired to Ning AsyncHttpClient (com.ning.http.client), not used in Kill Bill.
-
-Result: 894 tests pass (no new tests -- these are utilities), 0 failures. 6 files remain in java-excluded/.
-
-### Sub-phase 1.7.7 -- Cleanup and Finalize
-
-Removed easymock dependency from pom.xml. Migrated last 2 EasyMock holdouts
-(ParamConverterTest and MutantImplTest) which only used createMock() -- replaced
-with Mockito.mock(). No EasyMock or PowerMock references remain in active test code.
-mockito-core (managed by killbill-oss-parent) is now the sole test mock framework.
-
-The -Pjooby profile is retained: reuseForks=false is still needed for Mockito inline
-mock maker stability, and java-excluded/ still has 6 files that would fail compilation.
-
-Result: 894 tests pass, 0 failures. EasyMock migration complete.
+- `ParamConverterTest` and `MutantImplTest` were the last direct EasyMock holdouts; both now use `Mockito.mock()`
+- `Issue1087.java` was deleted because it was the only direct `@JsonView` / `jackson-annotations` consumer in the forked test tree
+- the direct `jackson-annotations` dependency path was removed from `pom.xml` after `Issue1087.java` was deleted
